# AIrecommand

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: update.yml
backend/analyzers/: base.py  catalyst.py  developer.py  news.py  onchain_growth.py  risk.py  technical.py  user_ecosystem.py  valuation.py
backend/common/: cache.py  config.py  llm_client.py  logging_config.py
backend/datasources/: base.py  coingecko.py  defillama.py  feargreed.py  github.py  paid_mock.py  rss.py
backend/pipeline/: analyze.py  backfill.py  collect.py  explain.py  filters.py  models.py  publish.py  rank.py  run_all.py  scoring.py
data/analysis/: 2026-07-05.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json
data/latest/: analysis.json  ranking.json  top300.json
data/ranking/: 2026-07-05.json  (+12 more)
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
tests/: conftest.py  test_analyze_pipeline.py  test_analyzers_base.py  test_backfill.py  test_cache.py  test_catalyst.py  test_coingecko.py  test_defillama.py  test_developer.py  test_explain.py  test_feargreed.py  test_filters.py  test_github.py  test_llm_client.py  test_news.py  test_onchain_growth.py  test_paid_mock.py  test_publish.py  test_rank_pipeline.py  test_risk.py  test_rss.py  test_run_all.py  test_scoring.py  test_technical.py  test_user_ecosystem.py  test_valuation.py
(+117 files in other folders)
