[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-altcoin-research-agent"
version = "0.2.0"
description = "AI Altcoin Research Agent v2 - 펀더멘털 선행지표 기반 알트코인 스크리너"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["anthropic>=0.40"]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
